tests/ui/layout/hang-sroa-layout-cycle.stderr
error[E0391]: cycle detected when computing layout of `Thing<Identity>`
   |
   = note: ...which requires computing layout of `<Identity as Apply>::Output<Thing<Identity>>`...
   = note: ...which again requires computing layout of `Thing<Identity>`, completing the cycle
note: cycle used when optimizing MIR for `main`
  --> $DIR/hang-sroa-layout-cycle.rs:28:1
   |
LL | fn main() {
   | ^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
